--- a/env.html
+++ b/env.html
@@ -321,6 +321,7 @@ end</code>
         </pre>
 
         <br/><p class="text">setCode(code:string) - overwrites the computer code but does not restart it.<br/>
+        <br/><p class="text">setEncryptedCode(bytecode:string, string|nil) - sets the encrypted code, which can be obtained from the enlua library. it can be used to receive OTA updates in encrypted form. the second argument is a comment for the user that can be set for the encrypted code<br/>
         the changes will take effect after the reboot(you can trigger a software reboot) can be used, for example, to update the code through the antenna. <br/>
         please note that if you had code encryption enabled, then after using this method, the code will no longer be encrypted. If you need to update the code so that it remains encrypted, you need to call encryptCode() immediately after this method.</p>
         <br/><p class="text">getCode():string - returns the current computer code<br/>
