--- a/libraries.html
+++ b/libraries.html
@@ -28,7 +28,7 @@
             <a class="hyper" href="./image.html"><li><span>image</span></li></a>
             <a class="hyper" href="./json.html"><li><span>json</span></li></a>
             <a class="hyper" href="./midi.html"><li><span>midi</span></li></a>
-            <a class="hyper" href="./nbs.html"><li><span>nbs (NEW!)</span></li></a>
+            <a class="hyper" href="./nbs.html"><li><span>nbs</span></li></a>
             <a class="hyper" href="./objs.html"><li><span>objs</span></li></a>
             <a class="hyper" href="./ramfs.html"><li><span>ramfs</span></li></a>
             <a class="hyper" href="./styles.html"><li><span>styles</span></li></a>
@@ -37,6 +37,7 @@
             <a class="hyper" href="./vdisplay.html"><li><span>vdisplay</span></li></a>
             <a class="hyper" href="./syntax.html"><li><span>syntax</span></li></a>
             <a class="hyper" href="./xEngine.html"><li><span>xEngine (physical 3D engine)</span></li></a>
+            <a class="hyper" href="./enlua.html"><li><span>enlua (encryption and execution of encrypted code) (NEW!)</span></li></a>
         </ul>
     </body>
 </html>
