--- a/display.html
+++ b/display.html
@@ -62,6 +62,7 @@
             <li><span>display.getWidth():number - returns the width of the display in pixels</span></li>
             <li><span>display.getHeight():number - returns the height of the display in pixels</span></li>
             <li><span>display.getSize():number, number - returns the width and height of the display</span></li>
+            <li><span>display.getResolution():number, number - alias to display.getSize</span></li>
             <li><span>display.setUtf8Support(state:boolean) - set to true if you want to use Russian or other special characters which take up more than one byte (default: false)</span></li>
             <li><span>display.getUtf8Support():boolean - returns the value set using display.setUtf8Support (default: false)</span></li>
             <li><span>display.setRenderAtDistance(state:boolean) - allows you to see the contents of the display much further than it is usually visible (requires enable in the mod config) (default: false)</span></li>
@@ -81,8 +82,8 @@
             <li><span>display.isMonospacedFont():boolean - returns true if a monospaced font is set</span></li>
             <li><span>display.setBrightness(float) - sets the brightness multiplier for the screen. after calling this method, redraw the entire screen. it should usually be called at the very beginning of the program, immediately after display.reset. the value must be greater than 0 (default: 1)</span></li>
             <li><span>display.getBrightness():float - returns the screen brightness multiplier (default: 1)</span></li>
-            <li><span>display.setLight(number) - sets the glow level of the display (min:0, max:255) (default: 180)</span></li>
-            <li><span>display.getLight():number - returns the value set using display.setLight (default: 180)</span></li>
+            <li><span>display.setLight(number) - sets the glow level of the display (min:0, max:255) (default: 255)</span></li>
+            <li><span>display.getLight():number - returns the value set using display.setLight (default: 255)</span></li>
             <li><span>display.reset() - resets all display settings but does not clear it</span></li>
 
             <br/>
@@ -92,6 +93,8 @@
             <li><span>display.setMaxClicks(number) - sets the maximum number of clicks that fit into the buffer from 1 to 16 (default: 16)</span></li>
             <li><span>display.getMaxClicks():number - returns the value set using display.setMaxClicks (default: 16)</span></li>
             <li><span>display.getClick():table - reads a table with information about the click. if there was no click, it will return nil</span></li>
+            <li><span>display.getTouchs():{click, click, ...} - returns all currently active clicks in the "pressed" and "drag" states</span></li>
+            <li><span>display.getTouch():click - returns the first active click</span></li>
 
             <pre>
                 <code class="language-lua" style="width: fit-content;">--the structure of the click table
