--- a/rom.html
+++ b/rom.html
@@ -46,6 +46,14 @@
             <li><span>8. save your creation to blueprint again UNDER THE SAME NAME WITH OVERWRITING!! this is very important, without it, if you post your creation, subscribers will not get access to the data in json</span></li>
             <li><span>9. as a result, it should turn out that your creation has a json file with the data you need, and it also has a ROM disk where the path to this json is indicated, where the UUID of this creation itself is located</span></li>
         </ul>
+
+        <br/>
+        <p class="text">warnings:</p>
+        <ul class="list">
+            <li><span>1. make sure that you do not have duplicate creations with the same name. as this may cause the ROM disk to work for you. but it won't be able to find the file from other people when you publish the creation</span></li>
+            <li><span>2. a creation with a duplicate name usually occurs when you insert a name instead of manually entering the name of the creation during rewriting. in this case, despite the appearance of a menu with a rewrite request, a new instance with the same name is created. what can cause you to put a file in a folder with one creation and accidentally publish another</span></li>
+            <li><span>3. make sure that you put the file in the folder with your creation and not another one. as this will result in the file not being found by subscribers</span></li>
+        </ul>
         
         <br/>
         <p class="text">methods:</p>
